--- a/src/index.css
+++ b/src/index.css
@@ -122,6 +122,7 @@ main {
 /* === Calendar === */
 
 .main__calendar {
+  height: 76px;
   display: flex;
   align-items: center;
 }
@@ -299,6 +300,7 @@ main {
   margin-left: 100px;
   background-color: #FFFFFF;
   box-shadow: 0px 8px 16px rgba(17, 17, 17, 0.15);
+  cursor: default;
   border-radius: 30px;
   transition: transform 0.3s;
 }
